# toy_compiler

./: .gitconfig  .gitignore  .pycc_history  README.md  pyproject.toml
.devcontainer/: devcontainer.json
comp/: __init__.py
compiler/: __init__.py
parser/: .pycc_history  __init__.py  parsetab.py  pthep.py
scoped_dict/: __init__.py
tests/: __init__.py
tests/input/valid/: add_in_func.txt  add_in_func_rev.txt  add_in_func_smc.txt  add_in_func_smc_rev.txt  and_in_func_0_0.txt  and_in_func_0_1.txt  and_in_func_1_0.txt  and_in_func_1_1.txt  and_in_func_false_false.txt  and_in_func_false_true.txt  and_in_func_false_var_true.txt  and_in_func_true_false.txt  and_in_func_true_true.txt  and_in_func_true_var_false.txt  and_in_func_true_var_true.txt  and_in_func_var_true_false.txt  and_in_func_var_true_true.txt  div_in_func.txt  div_in_func_rev.txt  div_in_func_smc.txt  div_in_func_smc_rev.txt  mul_in_func.txt  mul_in_func_rev.txt  mul_in_func_smc.txt  mul_in_func_smc_rev.txt  sub_in_func.txt  sub_in_func_rev.txt  sub_in_func_smc.txt  sub_in_func_smc_rev.txt
tokenizer/: __init__.py
utils/history/: __init__.py
utils/node/: __init__.py
