[tool.poetry]
name = "compiler"
version = "0.1.0"
description = ""
authors = ["Loula Beck <loula.beck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
ply = "^3.11"
llvmlite = "^0.43.0"
numba = "^0.60.0"

[tool.poetry.scripts]
run = "compiler:main"
compiler = "comp:main"
parser = "parser:main"
test = "tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
